versions/v0.11/modules/en/pages/experimental-features/enableexperimental.adoc
= How to enable experimental features
:revdate: 2025-04-30
:page-revdate: {revdate}

{product_name} supports experimental features that are disabled by default and that can be enabled by the user.

Enabling/disabling experimental features is done using extra environment variables that are available when deploying `rancher/fleet`.

[#_enabling_an_experimental_feature]
== Enabling an experimental feature

At the moment we're writing this document, {product_name} has OCI storage as an experimental feature.

[#_enabling_when_installing_product_name_stand_alone]
=== Enabling when installing {product_name} stand-alone

All you need to do is to pass something like:

[,bash]
----
--set-string extraEnv[0].name=EXPERIMENTAL_OCI_STORAGE \
--set-string extraEnv[0].value=true \
----

to your helm install or update command. 

Please note you have to use `--set-string` because otherwise the boolean value won't work as expected.

[#_enabling_when_installing_product_name_with_rancher]
=== Enabling when installing {product_name} with Rancher

You can also activate the experimental features in {product_name} when installing Rancher.

The parameters are the same, but you have to add the `fleet.` prefix.

[,bash]
----
--set-string fleet.extraEnv[0].name=EXPERIMENTAL_OCI_STORAGE \
--set-string fleet.extraEnv[0].value=true \
----

[#_available_experimental_features]
== Available experimental features

Right now {product_name} supports the following experimental features:

* xref:experimental-features/oci-storage.adoc[`EXPERIMENTAL_OCI_STORAGE`]