versions/v0.14/modules/en/pages/experimental-features/enableexperimental.adoc
= How to enable experimental features
:revdate: 2025-10-10
:page-revdate: {revdate}
:page-aliases: /enableexperimental

{product_name} supports experimental features that are disabled by default and can be enabled by the user.

Enabling or disabling experimental features is done using extra environment variables that are available when deploying `rancher/fleet`.

For more information, refer to Configure xref:reference/ref-configuration.adoc#_configure_productname_install_options_in_rancher[{product_name} install options in Rancher]

[#_available_experimental_features]
== Available experimental features

{product_name} currently supports the following experimental features, toggled through their respective environment variables:

* xref:experimental-features/scheduling.adoc[Scheduling]: `EXPERIMENTAL_SCHEDULES`
* xref:experimental-features/experimental-downstream-resource.adoc[Automated propagation of resources to downstream
  clusters]: `EXPERIMENTAL_COPY_RESOURCES_DOWNSTREAM`

[#_enabling_an_experimental_feature]
== Enabling an experimental feature

[#_enabling_when_installing_productname_stand_alone]
=== Enabling when installing {product_name} stand-alone

All you need to do is pass something like:

[source,bash]
----
--set-string extraEnv[0].name=EXPERIMENTAL_SCHEDULES \
--set-string extraEnv[0].value=true
----

to your `helm install` or `helm upgrade` command.

[NOTE]
====
You have to use `--set-string` because otherwise the boolean value won't work as expected.
====

[#_enabling_when_installing_productname_with_rancher]
=== Enabling when installing {product_name} with Rancher

You can also activate the experimental features in {product_name} when installing Rancher.

The parameters are the same, but you have to add the `fleet.` prefix:

[source,bash]
----
--set-string fleet.extraEnv[0].name=EXPERIMENTAL_SCHEDULES \
--set-string fleet.extraEnv[0].value=true
----
